@@ -374,9 +374,34 @@ mb_wm_client_window_sync_properties ( MBWMClientWindow *win,
 	  MBWM_DBG("@@@ Window transient for %lx @@@", *trans_win);
 
 	  if (*trans_win != win->xwin_transient_for)
-	    changes |= MBWM_WINDOW_PROP_TRANSIENCY;
+	    {
+	      MBWindowManagerClient *new_parent =
+		mb_wm_managed_client_from_xwindow (wm, *trans_win);
 
-	  win->xwin_transient_for = *trans_win;
+	      changes |= MBWM_WINDOW_PROP_TRANSIENCY;
+
+	      if (!new_parent)
+		{
+		  g_warning ("Window %07x attempted to become transient to %07x "
+			     "which isn't a real window; ignoring",
+			     (int) win->xwindow, *trans_win);
+		}
+	      else
+		{
+		  MBWindowManagerClient *child =
+		    mb_wm_managed_client_from_xwindow (wm, win->xwindow);
+
+		  win->xwin_transient_for = *trans_win;
+
+		  if (child)
+		    {
+		      /* it's already mapped */
+		      mb_wm_client_remove_transient (child->transient_for, child);
+		      mb_wm_client_add_transient (new_parent, child);
+		    }
+		}
+	    }
+
 	  XFree(trans_win);
 	}
       else MBWM_DBG("@@@ Window transient for nothing @@@");
