@@ -1,3 +1,11 @@
+2009-03-18  Thomas Thurman  <thomas.thurman@collabora.co.uk>
+
+	Fixes: NB#103836 (or at least its test case).
+	
+	* matchbox/core/mb-wm-client-window.c: When we're told that
+	a window's transiency has changed, update the information
+	in the client window structure if the window is mapped.
+
 2009-03-18  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	* matchbox/core/mb-wm-client-base.[ch] (base_foo): Removed, does
